fix: update CORS to allow all origins for production frontend